--- a/chatFlask-main/templates/lawyer_chat.html
+++ b/chatFlask-main/templates/lawyer_chat.html
@@ -200,7 +200,7 @@
         let lawyerName = '';
         switch(lawyerType) {
             case 'korporativni odvetnik':
-                lawyerName = 'Sarah Johnson';
+                lawyerName = 'JAKA KOŠIR';
                 break;
             case 'Criminal':
                 lawyerName = 'Michael Rodriguez';
