--- a/chatFlask-main/templates/login.html
+++ b/chatFlask-main/templates/login.html
@@ -6,7 +6,7 @@
     <title>GT - Login</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Baskerville';
             background: linear-gradient(135deg, #ffffff 0%, #36454f 100%);
             display: flex;
             justify-content: center;
