--- a/chatFlask-main/templates/lawyer_chat.html
+++ b/chatFlask-main/templates/lawyer_chat.html
@@ -199,7 +199,7 @@
         // Imena odvetnikov glede na vrsto
         let lawyerName = '';
         switch(lawyerType) {
-            case 'korporativni odvetnik':
+            case 'Korporativni':
                 lawyerName = 'JAKA KOŠIR';
                 break;
             case 'Criminal':
@@ -235,7 +235,7 @@
                 addMessage(message, 'user');
                 input.value = '';
                 
-                //preprost tekst ki ga poslje na zacetku
+                
                 
             }
         }
