--- a/chatFlask-main/templates/login.html
+++ b/chatFlask-main/templates/login.html
@@ -83,7 +83,7 @@
             <button type="submit" class="login-btn">LOGIN</button>
         </form>
         <div class="register-link">
-            Don't have an account? <a href="{{ url_for('registracija') }}">Register</a>
+            Še nimas računa? <a href="{{ url_for('registracija') }}">registracija</a>
         </div>
     </div>
 </body>
